[package]
name = "rsCAVI"
version = "0.1.0"
authors = ["Lukas Madenach <lukas.madenach@kitz-heidelberg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsCAVI"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
ndarray = "0.15.4"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rayon = "1.5.1"

